--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,10 +10,40 @@ body {
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
+
+    select option {
+      @apply bg-gray-900;
+    }
   }
 }
 
 .container {
-  width: min(100% - 2rem, 60rem);
+  width: min(100% - 2rem, 50rem);
   margin-inline: auto;
+}
+
+.status {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.status::before {
+  content: '';
+  display: inline-block;
+  border-radius: 100%;
+  width: 10px;
+  height: 10px;
+}
+
+.status_alive::before {
+  background-color: #55cc44;
+}
+
+.status_dead::before {
+  background-color: #d63d2e;
+}
+
+.status_unknown::before {
+  background-color: #e69d3e;
 }
